--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ ul {
   margin: 0;
 }
 
+a {
+  color: rgb(20, 150, 20);
+}
+
 address {
   font-style: normal;
 }
@@ -58,6 +62,15 @@ address {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+}
+
+#contact address {
+  padding-top: 0.5em;
+}
+
+#contact th {
+  text-align: left;
+  padding-right: 1em;
 }
 
 @media screen and (min-width: 100px) {
@@ -111,44 +124,3 @@ address {
     height: 200px;
   }
 }
-
-/*
-@media screen and (min-width: 800px) {
-  html {
-    background: url(../images/wallpaper-landscape.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-    
-  #we-offer{
-    float:left; 
-  }
-
-  #arrangement {
-    float: right;
-  }
-
-  #contact{
-    float: right;
-  }
-  
-  #map {
-    float:left;
-  }
-  
-  .clear{
-    clear:both;
-  }
-
-  .clearfix:after { 
-     content: "."; 
-    visibility: hidden; 
-    display: block; 
-    height: 0; 
-    clear: both;
-  }
-}
-*/
