--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ address {
 
 .box {
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 600px;
   
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
@@ -97,7 +97,7 @@ address {
   }
   
   .box {
-    margin: 0;
+    margin: 0 0 0 10%;
   }
   
   .info h2 {
