--- a/css/styles.css
+++ b/css/styles.css
@@ -36,12 +36,13 @@ address {
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
-  background: rgb(255, 255, 255); /* Fall-back for browsers that don't support rgba */
-  background: rgba(255, 255, 255, .8);
-   
+  background: rgba(194, 255, 194); /* Fall-back for browsers that don't support rgba */
+  background-color: rgba(0, 0, 0, 0.05);
+  /* 
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.22);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.22);
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.22);
+  */
 }
 
 .info { 
@@ -75,15 +76,7 @@ address {
 
 @media screen and (min-width: 100px) {
   html {
-    background: url(../images/wallpaper-portrait.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-  .box{
-    margin-bottom: 300px;
+    background: white;
   }
 }
 
