--- a/css/styles.css
+++ b/css/styles.css
@@ -36,13 +36,8 @@ address {
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
-  background: rgba(194, 255, 194); /* Fall-back for browsers that don't support rgba */
-  background-color: rgba(0, 0, 0, 0.05);
-  /* 
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.22);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.22);
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.22);
-  */
+  background: rgb(242, 242, 242); /* Fall-back for browsers that don't support rgba */
+  background-color: rgba(220, 222, 222, 0.8);
 }
 
 .info { 
@@ -63,6 +58,7 @@ address {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  opacity: 0.7;
 }
 
 #contact address {
