--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html { 
-  background: saddlebrown;
+  background: white;
 }
 
 body {
@@ -14,6 +14,7 @@ h1#heading {
 
 h2 {
   margin: 0;
+  padding-bottom: .5em;
 }
 
 ul {
@@ -23,6 +24,11 @@ ul {
 
 a {
   color: rgb(20, 150, 20);
+}
+
+p {
+    margin: 0;
+    margin-bottom: 1em;
 }
 
 address {
@@ -37,14 +43,12 @@ address {
   -moz-border-radius: 15px;
   border-radius: 15px;
   background: rgb(242, 242, 242); /* Fall-back for browsers that don't support rgba */
-  background-color: rgba(220, 222, 222, 0.8);
+  background-color: rgba(240, 240, 240, 0.7);
 }
 
 .info { 
   margin: 0 auto;
-  padding-top: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding: .5em 1em;
 }
 
 #opening-hours th {
@@ -101,7 +105,6 @@ address {
   }
   
   #map {
-    margin-top: 4em;
     height: 200px;
   }
 }
