--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,29 @@
-html { 
-  background: white;
+html {
+    background: white;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1#heading {
-  font-size: 48px;
-  padding-top: 0.5em;
-  text-align: center;
+    font-size: 48px;
+    padding-top: 0.5em;
+    text-align: center;
 }
 
 h2 {
-  margin: 0;
-  padding-bottom: .5em;
+    margin: 0;
+    padding-bottom: 0.5em;
 }
 
 ul {
-  padding: 0 1em;
-  margin: 0;
+    padding: 0 1em;
+    margin: 0;
 }
 
 a {
-  color: rgb(20, 150, 20);
+    color: rgb(20, 150, 20);
 }
 
 p {
@@ -32,101 +32,97 @@ p {
 }
 
 address {
-  font-style: normal;
+    font-style: normal;
 }
 
 .box {
-  margin: 0 auto;
-  max-width: 600px;
-  border-radius: 15px;
-  background: rgb(242, 242, 242); /* Fall-back for browsers that don't support rgba */
-  background-color: rgba(240, 240, 240, 0.7);
+    margin: 0 auto;
+    max-width: 600px;
+    border-radius: 15px;
+    background: rgb(242, 242, 242); /* Fall-back for browsers that don't support rgba */
+    background-color: rgba(240, 240, 240, 0.7);
 }
 
-.info { 
-  margin: 0 auto;
-  padding: .5em 1em;
+.info {
+    margin: 0 auto;
+    padding: 0.5em 1em;
 }
 
 #opening-hours th {
-  padding-right: 1em;
+    padding-right: 1em;
 }
 
-#map { 
-  height: 400px;
-  border: 10px solid transparent;
-  border-radius: 5px;
-  opacity: 0.7;
+#map {
+    height: 400px;
+    border: 10px solid transparent;
+    border-radius: 5px;
+    opacity: 0.7;
 }
 
 #contact address {
-  padding-top: 0.5em;
+    padding-top: 0.5em;
 }
 
 #contact th {
-  text-align: left;
-  padding-right: 1em;
+    text-align: left;
+    padding-right: 1em;
 }
 
 @media screen and (min-width: 100px) {
-  html {
-    background: white;
-  }
+    html {
+        background: white;
+    }
 }
 
-@media screen and (min-width: 800px) { 
-  .box {
-    margin: 0 0 0 10%;
-  }
-  
-  .info h2 {
-    vertical-align: top;
-    margin-top: 0;
-    padding-top: 0;
-  }
-  
-  .clearfix:after { 
-    content: "."; 
-    visibility: hidden; 
-    display: block; 
-    height: 0; 
-    clear: both;
-  }
-
-  #opening-hours {
-    float: left;
-    width: 50%;
-  }
-  
-  #map {
-    height: 200px;
-  }
+@media screen and (min-width: 800px) {
+    .box {
+        margin: 0 0 0 10%;
+    }
+    .info h2 {
+        vertical-align: top;
+        margin-top: 0;
+        padding-top: 0;
+    }
+    .clearfix::after {
+        content: ".";
+        visibility: hidden;
+        display: block;
+        height: 0;
+        clear: both;
+    }
+    #opening-hours {
+        float: left;
+        width: 50%;
+    }
+    #map {
+        height: 200px;
+    }
 }
 
 @media screen and (min-width: 800px) and (max-width: 1024px) {
-  html {
-    background: url(../images/wallpaper-1024.jpg) no-repeat center center fixed;
-    background-size: cover;
-  }
+    html {
+        background: url(../images/wallpaper-1024.jpg) no-repeat center center fixed;
+        background-size: cover;
+    }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
-  html {
-    background: url(../images/wallpaper-1280.jpg) no-repeat center center fixed;
-    background-size: cover;
-  }
+    html {
+        background: url(../images/wallpaper-1280.jpg) no-repeat center center fixed;
+        background-size: cover;
+    }
 }
 
 @media screen and (min-width: 1281px) and (max-width: 1920px) {
-  html {
-    background: url(../images/wallpaper-1920.jpg) no-repeat center center fixed;
-    background-size: cover;
-  }
+    html {
+        background: url(../images/wallpaper-1920.jpg) no-repeat center center fixed;
+        background-size: cover;
+    }
 }
 
 @media screen and (min-width: 1921px) {
-  html {
-    background: url(../images/wallpaper.jpg) no-repeat center center fixed;
-    background-size: cover;
-  }
+    html {
+        background: url(../images/wallpaper.jpg) no-repeat center center fixed;
+        background-size: cover;
+    }
 }
